@@ -261,7 +261,9 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		* Handle different UPnP library versions
 		* UPnP for amuleweb.
 		* Fix for crash on exit and a little less redundancy.
-		* Trying to make listctrls behave on Mac
+		* Trying to make listctrls behave on Mac.
+		* Fix for CheckFreeDiskSpace(). Was probably returning ok if
+		  the directory where the file would be saved did not exist.
 
 	Radek:
 		* Patch to fix windows compilation.
